--- a/levels/condicao/contextual/condicao_contextual.html
+++ b/levels/condicao/contextual/condicao_contextual.html
@@ -14,7 +14,7 @@
 
             <section class="cabecalho__menu">
 
-                <a class="cabecalho__menu__link" href="/home.html">Home</a>
+                <a class="cabecalho__menu__link" href="/index.html">Home</a>
                 <a class="cabecalho__menu__link" href="/game.html">Start</a>
                 <a class="cabecalho__menu__link" href="/about.html">Sobre</a>
 
