--- a/levels/algoritmo/codigo/algoritmo_codigo.html
+++ b/levels/algoritmo/codigo/algoritmo_codigo.html
@@ -31,27 +31,27 @@
 
                 <div class="menu__level">
 
-                    <a class="menu__level__titulo forma1" href="/levels/algoritmo/codigo/lvls/algoritmo_codigo_lvl1.html">Nível 1</a>
+                    <a class="menu__level__titulo forma1" href="lvls/algoritmo_codigo_lvl1.html">Nível 1</a>
 
                 </div>
                 <div class="menu__level">
 
-                    <a class="menu__level__titulo forma2" href="/levels/algoritmo/codigo/lvls/algoritmo_codigo_lvl2.html">Nível 2</a>
+                    <a class="menu__level__titulo forma2" href="lvls/algoritmo_codigo_lvl2.html">Nível 2</a>
 
                 </div>
                 <div class="menu__level">
 
-                    <a class="menu__level__titulo forma3" href="/levels/algoritmo/codigo/lvls/algoritmo_codigo_lvl3.html">Nível 3</a>
+                    <a class="menu__level__titulo forma3" href="lvls/algoritmo_codigo_lvl3.html">Nível 3</a>
 
                 </div>
                 <div class="menu__level">
 
-                    <a class="menu__level__titulo forma4" href="/levels/algoritmo/codigo/lvls/algoritmo_codigo_lvl4.html">Nível 4</a>
+                    <a class="menu__level__titulo forma4" href="lvls/algoritmo_codigo_lvl4.html">Nível 4</a>
 
                 </div>
                 <div class="menu__level">
 
-                    <a class="menu__level__titulo forma5" href="/levels/algoritmo/codigo/lvls/algoritmo_codigo_lvl5.html">Nível 5</a>
+                    <a class="menu__level__titulo forma5" href="lvls/algoritmo_codigo_lvl5.html">Nível 5</a>
 
                 </div>
 
@@ -59,7 +59,7 @@
 
             <div class="menu__level">
 
-                <a class="menu__level__retorno forma6" href="/levels/algoritmo/algoritmo.html">Voltar</a>
+                <a class="menu__level__retorno forma6" href="../algoritmo.html">Voltar</a>
 
             </div>
 
