--- a/levels/variavel/codigo/variavel_codigo.html
+++ b/levels/variavel/codigo/variavel_codigo.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Algonigma - Desvendando algoritmos</title>
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="../../../styles/style.css">
 </head>
 <body>
 
@@ -14,9 +14,9 @@
 
             <section class="cabecalho__menu">
 
-                <a class="cabecalho__menu__link" href="/index.html">Home</a>
-                <a class="cabecalho__menu__link" href="/game.html">Start</a>
-                <a class="cabecalho__menu__link" href="/about.html">Sobre</a>
+                <a class="cabecalho__menu__link" href="../../../index.html">Home</a>
+                <a class="cabecalho__menu__link" href="../../../game.html">Start</a>
+                <a class="cabecalho__menu__link" href="../../../about.html">Sobre</a>
 
             </section>
 
@@ -31,27 +31,27 @@
 
                 <div class="menu__level">
 
-                    <a class="menu__level__titulo forma1" href="/levels/variavel/codigo/lvls/variavel_codigo_lvl1.html">Nível 1</a>
+                    <a class="menu__level__titulo forma1" href="lvls/variavel_codigo_lvl1.html">Nível 1</a>
 
                 </div>
                 <div class="menu__level">
 
-                    <a class="menu__level__titulo forma2" href="/levels/variavel/codigo/lvls/variavel_codigo_lvl2.html">Nível 2</a>
+                    <a class="menu__level__titulo forma2" href="lvls/variavel_codigo_lvl2.html">Nível 2</a>
 
                 </div>
                 <div class="menu__level">
 
-                    <a class="menu__level__titulo forma3" href="/levels/variavel/codigo/lvls/variavel_codigo_lvl3.html">Nível 3</a>
+                    <a class="menu__level__titulo forma3" href="lvls/variavel_codigo_lvl3.html">Nível 3</a>
 
                 </div>
                 <div class="menu__level">
 
-                    <a class="menu__level__titulo forma4" href="/levels/variavel/codigo/lvls/variavel_codigo_lvl4.html">Nível 4</a>
+                    <a class="menu__level__titulo forma4" href="lvls/variavel_codigo_lvl4.html">Nível 4</a>
 
                 </div>
                 <div class="menu__level">
 
-                    <a class="menu__level__titulo forma5" href="/levels/variavel/codigo/lvls/variavel_codigo_lvl5.html">Nível 5</a>
+                    <a class="menu__level__titulo forma5" href="lvls/variavel_codigo_lvl5.html">Nível 5</a>
 
                 </div>
 
@@ -59,7 +59,7 @@
 
         <div class="menu__level">
 
-            <a class="menu__level__retorno forma6" href="/levels/variavel/variavel.html">Voltar</a>
+            <a class="menu__level__retorno forma6" href="../variavel.html">Voltar</a>
 
         </div>
 
@@ -68,7 +68,7 @@
     </main>
 
     <footer class="rodape">
-        <img src="/img/logo.png" alt="Alura+" class="rodape__logo">
+        <img src="../../../img/logo.png" alt="Alura+" class="rodape__logo">
         <p class="rodape__texto">® 2023 Algonigma. Todos os direitos reservados.</p>
         <p class="rodape__texto">José Rodolfo Kreutzer</p>
     </footer>
