--- a/levels/variavel/variavel.html
+++ b/levels/variavel/variavel.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Algonigma - Desvendando algoritmos</title>
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="../../styles/style.css">
 </head>
 <body>
 
@@ -14,9 +14,9 @@
 
             <section class="cabecalho__menu">
 
-                <a class="cabecalho__menu__link" href="/index.html">Home</a>
-                <a class="cabecalho__menu__link" href="/game.html">Start</a>
-                <a class="cabecalho__menu__link" href="/about.html">Sobre</a>
+                <a class="cabecalho__menu__link" href="../../index.html">Home</a>
+                <a class="cabecalho__menu__link" href="../../game.html">Start</a>
+                <a class="cabecalho__menu__link" href="../../about.html">Sobre</a>
 
             </section>
 
@@ -31,12 +31,12 @@
 
                 <div class="menu__level">
 
-                    <a class="menu__level__titulo forma1" href="/levels/variavel/contextual/variavel_contextual.html">Contextual</a>
+                    <a class="menu__level__titulo forma1" href="contextual/variavel_contextual.html">Contextual</a>
 
                 </div>
                 <div class="menu__level">
 
-                    <a class="menu__level__titulo forma2" href="/levels/variavel/codigo/variavel_codigo.html">Códigos</a>
+                    <a class="menu__level__titulo forma2" href="codigo/variavel_codigo.html">Códigos</a>
 
                 </div>
 
@@ -44,7 +44,7 @@
 
             <div class="menu__level">
 
-                <a class="menu__level__retorno forma6" href="/game.html">Voltar</a>
+                <a class="menu__level__retorno forma6" href="../../game.html">Voltar</a>
     
             </div>
 
@@ -53,7 +53,7 @@
     </main>
 
     <footer class="rodape">
-        <img src="/img/logo.png" alt="Alura+" class="rodape__logo">
+        <img src="../../img/logo.png" alt="Alura+" class="rodape__logo">
         <p class="rodape__texto">® 2023 Algonigma. Todos os direitos reservados.</p>
         <p class="rodape__texto">José Rodolfo Kreutzer</p>
     </footer>
