Correção Lvl4 Condicao Contextual

--- a/levels/condicao/contextual/lvls/condicao_contextual_lvl4.html
+++ b/levels/condicao/contextual/lvls/condicao_contextual_lvl4.html
@@ -30,8 +30,7 @@
         <i class="cat draggable" draggable="true" style="color: #ff6384;" id="cinco">Decidir se deseja adicionar legumes à omelete. Se sim, adicione os legumes. </i>
         <i class="dog draggable" draggable="true" style="color: #36a2eb;" id="um">Pegar ovos na geladeira. </i>
         <i class="dove draggable" draggable="true" style="color: #ffce56;" id="tres">Aquecer uma frigideira e adicionar óleo. </i>
-        <i class="fish draggable" draggable="true" style="color: #9966ff;" id="sete">Se desejar, adicione queijo ralado à omelete.</i>
-        <i class="frog draggable" draggable="true" style="color: #4bc0c0;" id="oito">Se a omelete estiver pronta, retirá-la da frigideira e servir.</i>
+        <i class="frog draggable" draggable="true" style="color: #4bc0c0;" id="sete">Se a omelete estiver pronta, retirá-la da frigideira e servir.</i>
         <i class="frog draggable" draggable="true" style="color: #4bc0c0;" id="seis">Cozinhar até que a omelete esteja firme. </i>
         <i class="frog draggable" draggable="true" style="color: #4bc0c0;" id="dois">Bater os ovos com um garfo. </i>
         <i class="frog draggable" draggable="true" style="color: #4bc0c0;" id="quatro">Despejar os ovos batidos na frigideira.</i>
@@ -47,7 +46,6 @@
         <div class="droppable" data-draggable-id="cinco"></div>
         <div class="droppable" data-draggable-id="seis"></div>
         <div class="droppable" data-draggable-id="sete"></div>
-        <div class="droppable" data-draggable-id="oito"></div>
         
     </section class="acoes">
       
