--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
             
                 </section>
 
-                <img src="img/IMG-20231019-WA0007.jpg" alt="Foto do Criador" class="about__img">
+                <img src="img/fotojoaoformatur.png" alt="Foto do Criador" class="about__img">
 
             </div>
 
